common/force-app/main/default/objects/Lead/fields/Are_you_located_in_Australia__c.field-meta.xml
<CustomField>
    <fullName>Are_you_located_in_Australia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you located in Australia?</label>
    <type>Checkbox</type>
</CustomField>