common/force-app/main/default/objects/Lead/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <label>Attended?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>