common/force-app/main/default/objects/Lead/fields/Australian_City__c.field-meta.xml
<CustomField>
    <fullName>Australian_City__c</fullName>
    <label>Australian City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Adelaide</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>