common/force-app/main/default/objects/Lead/fields/Background_information__c.field-meta.xml
<CustomField>
    <fullName>Background_information__c</fullName>
    <label>Background information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>