common/force-app/main/default/objects/Lead/fields/Buy_Date__c.field-meta.xml
<CustomField>
    <fullName>Buy_Date__c</fullName>
    <label>Buy Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>