common/force-app/main/default/objects/Lead/fields/Buyer_Situation__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Situation__c</fullName>
    <label>Buyer Situation</label>
    <type>TextArea</type>
</CustomField>