common/force-app/main/default/objects/Lead/fields/Call_back_required__c.field-meta.xml
<CustomField>
    <fullName>Call_back_required__c</fullName>
    <description>Founder to mark if call back is required for this lead</description>
    <inlineHelpText>Founder to mark if call back is required for this lead</inlineHelpText>
    <label>Call back required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>