common/force-app/main/default/objects/Lead/fields/Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Company_Description__c</fullName>
    <label>Company Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>