common/force-app/main/default/objects/Lead/fields/Country_Registration__c.field-meta.xml
<CustomField>
    <fullName>Country_Registration__c</fullName>
    <label>Country Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Not Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>