common/force-app/main/default/objects/Lead/fields/Current_runway__c.field-meta.xml
<CustomField>
    <fullName>Current_runway__c</fullName>
    <label>Current runway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3 Months</fullName>
            </value>
            <value>
                <fullName>3 - 6 Months</fullName>
            </value>
            <value>
                <fullName>6+ Months</fullName>
            </value>
            <value>
                <fullName>12+ Months</fullName>
            </value>
            <value>
                <fullName>18+ Months</fullName>
            </value>
            <value>
                <fullName>24+ Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>