common/force-app/main/default/objects/Lead/fields/Date_Expected_for_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Date_Expected_for_Conversion__c</fullName>
    <label>Date Expected for Conversion</label>
    <type>Date</type>
</CustomField>