common/force-app/main/default/objects/Lead/fields/Days_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Creation__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(Status, &quot;CR Lost&quot;),
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISPICKVAL(Status, &quot;Lost&quot;)
  ),
  &quot;🟢 Lost/Unqualified&quot;,
  IF(
    ISPICKVAL(Status, &quot;Qualified&quot;),
    &quot;🟢 Qualified&quot;,
    IF(
      (TODAY() - DATEVALUE(CreatedDate)) &lt; 10,
      &quot;🟢 on time&quot;,
      IF(
        AND(
          (TODAY() - DATEVALUE(CreatedDate)) &gt;= 10,
          (TODAY() - DATEVALUE(CreatedDate)) &lt;= 20
        ),
        &quot;🟠 over 10d&quot;,
        IF(
          (TODAY() - DATEVALUE(CreatedDate)) = 21,
          &quot;🔴 21d&quot;,
          IF(
            (TODAY() - DATEVALUE(CreatedDate)) &gt; 21,
            &quot;over 21d&quot;,
            &quot;&quot;
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Creation</label>
    <type>Text</type>
</CustomField>