common/force-app/main/default/objects/Lead/fields/Deal_Quater__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quater__c</fullName>
    <label>Deal Quater</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>