common/force-app/main/default/objects/Lead/fields/Desired_Beds_2__c.field-meta.xml
<CustomField>
    <fullName>Desired_Beds_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Beds 2+</label>
    <type>Checkbox</type>
</CustomField>