common/force-app/main/default/objects/Lead/fields/Desired_Beds_5__c.field-meta.xml
<CustomField>
    <fullName>Desired_Beds_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Beds 5+</label>
    <type>Checkbox</type>
</CustomField>