common/force-app/main/default/objects/Lead/fields/Desired_Car_Garage_1__c.field-meta.xml
<CustomField>
    <fullName>Desired_Car_Garage_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Car Garage 1+</label>
    <type>Checkbox</type>
</CustomField>