common/force-app/main/default/objects/Lead/fields/Did_You_Find_Todays_Webinar_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Did_You_Find_Todays_Webinar_Helpful__c</fullName>
    <label>Did You Find Todays Webinar Helpful?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>