common/force-app/main/default/objects/Lead/fields/dupcheck__dc3Index__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__dc3Index__c</fullName>
    <label>Duplicate Check Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>