common/force-app/main/default/objects/Lead/fields/Email_Database_Size__c.field-meta.xml
<CustomField>
    <fullName>Email_Database_Size__c</fullName>
    <label>Email Database Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>