common/force-app/main/default/objects/Lead/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <label>Enquiry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>