common/force-app/main/default/objects/Lead/fields/ESIC_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>ESIC_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESIC Eligibility</label>
    <type>Checkbox</type>
</CustomField>