common/force-app/main/default/objects/Lead/fields/Estimated_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Month__c</fullName>
    <label>Estimated Start Month</label>
    <type>Date</type>
</CustomField>