common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_Action_Visit_Inves__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Action_Visit_Inves__c</fullName>
    <description>Uses of action &apos;Visit Invest&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Visit Invest&apos; (</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>