common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Engagement__c</fullName>
    <description>Engagement score based on activity</description>
    <label>Evergage Engagement (VentureCrowd)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>