common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_EngagementTrend__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_EngagementTrend__c</fullName>
    <description>Engagement trend based on activity</description>
    <label>Evergage Eng. Trend (VentureCrowd)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>