common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_Filters__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Filters__c</fullName>
    <description>Evergage matching filters</description>
    <label>Evergage Filters (VentureCrowd)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>