common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_LastActivity__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_LastActivity__c</fullName>
    <description>Last activity with application</description>
    <label>Evergage Last Visit (VentureCrowd)</label>
    <type>DateTime</type>
</CustomField>