common/force-app/main/default/objects/Lead/fields/Evergage_venturecrowd_Segment_K1iQ0__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Segment_K1iQ0__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Lead Wholesale Investor - High Financial Maturity&apos;</description>
    <label>Evergage In Segment &apos;Lead Wholesale Inv&apos;</label>
    <type>Checkbox</type>
</CustomField>