common/force-app/main/default/objects/Lead/fields/Exit_from_MCJ__c.field-meta.xml
<CustomField>
    <fullName>Exit_from_MCJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit from MCJ</label>
    <type>Checkbox</type>
</CustomField>