common/force-app/main/default/objects/Lead/fields/Expected_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Conversion_Date__c</fullName>
    <label>Expected Conversion Date</label>
    <type>Date</type>
</CustomField>