common/force-app/main/default/objects/Lead/fields/Founder_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Founder_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder Campaign</label>
    <referenceTo>Founder_Campaign__c</referenceTo>
    <relationshipLabel>Founder Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>