common/force-app/main/default/objects/Lead/fields/Founder_EOI__c.field-meta.xml
<CustomField>
    <fullName>Founder_EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Founder Lead</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>