common/force-app/main/default/objects/Lead/fields/Founder_Interest__c.field-meta.xml
<CustomField>
    <fullName>Founder_Interest__c</fullName>
    <label>Founder Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>EOI Listing Fee</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Friends &amp; Family</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>