common/force-app/main/default/objects/Lead/fields/Founder_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Founder_Readiness__c</fullName>
    <label>Founder Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>✅ Contact Now - Ready 2 Raise</fullName>
            </value>
            <value>
                <fullName>🚫 Don&apos;t Contact - Own Pace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>