common/force-app/main/default/objects/Lead/fields/gclid__c.field-meta.xml
<CustomField>
    <fullName>gclid__c</fullName>
    <label>gclid</label>
    <type>TextArea</type>
</CustomField>