common/force-app/main/default/objects/Lead/fields/Growth_Services_Need__c.field-meta.xml
<CustomField>
    <fullName>Growth_Services_Need__c</fullName>
    <label>Growth Services Need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Value Prop</fullName>
            </value>
            <value>
                <fullName>User Experience</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Investor Narrative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>