common/force-app/main/default/objects/Lead/fields/How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_us__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Signage</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Real Estate.com</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Referral – Family or Friends</fullName>
            </value>
            <value>
                <fullName>Colliers or Colliers database</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Realestate.com.au</fullName>
            </value>
            <value>
                <fullName>Domain.com.au</fullName>
            </value>
            <value>
                <fullName>Print Advertising</fullName>
            </value>
            <value>
                <fullName>Word of Mouth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>