common/force-app/main/default/objects/Lead/fields/ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>ID_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is updated only when the ID is confirmed using GreenID</description>
    <label>ID Checked</label>
    <type>Checkbox</type>
</CustomField>