common/force-app/main/default/objects/Lead/fields/Initial_Enquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Enquiry_Date__c</fullName>
    <label>Initial Enquiry Date</label>
    <type>Date</type>
</CustomField>