common/force-app/main/default/objects/Lead/fields/Inspection_requested__c.field-meta.xml
<CustomField>
    <fullName>Inspection_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection requested</label>
    <type>Checkbox</type>
</CustomField>