common/force-app/main/default/objects/Lead/fields/Interested_in_Making_an_Investment__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Making_an_Investment__c</fullName>
    <label>Interested in Making an Investment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>