common/force-app/main/default/objects/Lead/fields/Interested_Location__c.field-meta.xml
<CustomField>
    <fullName>Interested_Location__c</fullName>
    <inlineHelpText>SEQ Suburb</inlineHelpText>
    <label>Interested Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>