common/force-app/main/default/objects/Lead/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <description>The field is out of use now. The currency type Investment amount field is in use instead.</description>
    <inlineHelpText>Provide an indication of the investment amount you are considering.</inlineHelpText>
    <label>Investment Amount</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$250 to $500</fullName>
            </value>
            <value>
                <fullName>$500 to $1,000</fullName>
            </value>
            <value>
                <fullName>$1,000 to $2,000</fullName>
            </value>
            <value>
                <fullName>$2,000 to $5,000</fullName>
            </value>
            <value>
                <fullName>$1,000 to $3,000</fullName>
            </value>
            <value>
                <fullName>$3,000 to $5,000</fullName>
            </value>
            <value>
                <fullName>$5,000 to $8,000</fullName>
            </value>
            <value>
                <fullName>$8,000 to $10,000</fullName>
            </value>
            <value>
                <fullName>$10,000 to $20,000</fullName>
            </value>
            <value>
                <fullName>$20,000 to $50,000</fullName>
            </value>
            <value>
                <fullName>$50,000 to $100,000</fullName>
            </value>
            <value>
                <fullName>$100,000 to $200,000</fullName>
            </value>
            <value>
                <fullName>$200,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>