common/force-app/main/default/objects/Lead/fields/Investment_Amount_Currency__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount_Currency__c</fullName>
    <label>Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>