common/force-app/main/default/objects/Lead/fields/Investment_Style__c.field-meta.xml
<CustomField>
    <fullName>Investment_Style__c</fullName>
    <label>Investment Style</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
            <value>
                <fullName>Preference Shares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>