common/force-app/main/default/objects/Lead/fields/Investor_ID__c.field-meta.xml
<CustomField>
    <fullName>Investor_ID__c</fullName>
    <label>Investor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>