common/force-app/main/default/objects/Lead/fields/Land_Size__c.field-meta.xml
<CustomField>
    <fullName>Land_Size__c</fullName>
    <label>Desired Land Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>250 sqmt+</fullName>
            </value>
            <value>
                <fullName>350 sqmt+</fullName>
            </value>
            <value>
                <fullName>450 sqmt+</fullName>
            </value>
            <value>
                <fullName>550 sqmt+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>