common/force-app/main/default/objects/Lead/fields/Last_Activity_Update_Alert__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Update_Alert__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status, &quot;CR Lost&quot;),
        ISPICKVAL(Status, &quot;Unqualified&quot;),
        ISPICKVAL(Status, &quot;Lost&quot;)
    ),
    &quot;🟢 Lost/Unqualified&quot;,
    IF(
        ISPICKVAL(Status, &quot;Qualified&quot;),
        &quot;🟢 Qualified&quot;,
        IF(
            ISBLANK(LastActivityDate),
            &quot;🟠 no activity&quot;,
            IF(
                (TODAY() - LastActivityDate) &lt; 5,
                &quot;🟢 on time&quot;,
                IF(
                    AND(
                        (TODAY() - LastActivityDate) &gt;= 5,
                        (TODAY() - LastActivityDate) &lt;= 10
                    ),
                    &quot;🟠 over 5d&quot;,
                    IF(
                        (TODAY() - LastActivityDate) &gt; 10,
                        &quot;🔴 over 10d&quot;,
                        &quot;&quot;
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity Update Alert</label>
    <type>Text</type>
</CustomField>