common/force-app/main/default/objects/Lead/fields/Last_Record_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Record_Update__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status, &quot;CR Lost&quot;),
        ISPICKVAL(Status, &quot;Unqualified&quot;),
        ISPICKVAL(Status, &quot;Lost&quot;)
    ),
    &quot;🟢 Lost/Unqualified&quot;,
    IF(
        ISPICKVAL(Status, &quot;Qualified&quot;),
        &quot;🟢 Qualified&quot;,
        IF(
            (TODAY() - DATEVALUE(LastModifiedDate)) &lt; 5,
            &quot;🟢 on time&quot;,
            IF(
                AND(
                    (TODAY() - DATEVALUE(LastModifiedDate)) &gt;= 5,
                    (TODAY() - DATEVALUE(LastModifiedDate)) &lt;= 10
                ),
                &quot;🟠 over 5d&quot;,
                IF(
                    (TODAY() - DATEVALUE(LastModifiedDate)) &gt; 10,
                    &quot;🔴 over 10d&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Record Update</label>
    <type>Text</type>
</CustomField>