common/force-app/main/default/objects/Lead/fields/Lead_Auto_Number_VCPP__c.field-meta.xml
<CustomField>
    <fullName>Lead_Auto_Number_VCPP__c</fullName>
    <label>Lead Auto Number VCPP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>