common/force-app/main/default/objects/Lead/fields/Lead_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interest__c</fullName>
    <inlineHelpText>Please enter the leads interest or any product code the lead has shown interest for</inlineHelpText>
    <label>Lead Interest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>