common/force-app/main/default/objects/Lead/fields/Lead_investor_secured__c.field-meta.xml
<CustomField>
    <fullName>Lead_investor_secured__c</fullName>
    <label>Lead investor secured?</label>
    <type>TextArea</type>
</CustomField>