common/force-app/main/default/objects/Lead/fields/Lead_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Number__c</fullName>
    <description>Auto number for new lead</description>
    <displayFormat>{0}</displayFormat>
    <inlineHelpText>Auto number for new lead</inlineHelpText>
    <label>Lead Number</label>
    <type>AutoNumber</type>
</CustomField>