common/force-app/main/default/objects/Lead/fields/Lead_Owner_Copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Copy__c</fullName>
    <description>Copy of the lead owner ID to pass it to the Opportunity on conversion</description>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Copy of the lead owner ID to pass it to the Opportunity on conversion</inlineHelpText>
    <label>Lead Owner Copy</label>
    <type>Text</type>
</CustomField>